# trading_py_mt5

./: .gitignore  README.md  main.py  pyproject.toml  trading_app.py
data_provider/: data_provider.py
event/: event.py
jupyter_notebooks/: conncect.py
notifications/: notifications.py
notifications/channels/: telegram_notification_channel.py
notifications/interfaces/: notification_channel_interface.py
notifications/properties/: properties.py
order_executor/: order_executor.py
platform_connector/: platform_connector.py
portfolio/: portfolio.py
position_sizer/: position_sizer.py
position_sizer/interfaces/: position_sizer_interface.py
position_sizer/position_sizers/: fixed_size_position_sizer.py  min_size_position_sizer.py  risk_pct_position_sizer.py
position_sizer/properties/: position_sizer_properties.py
risk_manager/: risk_manager.py
risk_manager/interfaces/: risk_manager_interface.py
risk_manager/properties/: risk_manager_properties.py
risk_manager/risk_managers/: max_leverage_factor_risk_manager.py
signal_generator/: signal_generator.py
signal_generator/interfaces/: signal_generator.py
signal_generator/properties/: signal_generator_properties.py
signal_generator/signals/: signal_ma_crossover.py  signal_rsi_mr.py
trading_director/: trading_director.py
utils/: utils.py
